syntax = "proto3";

package service;

option go_package = ".;pb";

import "domains/post_message.proto";

service PostService {
  rpc GetPosts(GetPostsRequest) returns (GetPostsResponse);
  rpc GetPostById(GetPostByIdRequest) returns (GetPostByIdResponse);
  rpc GetPostByIds(GetPostByIdsRequest) returns (stream GetPostByIdsResponse);
}

message GetPostsRequest {
}

message GetPostsResponse {
  repeated domain.Post Posts = 1;
}

message GetPostByIdRequest {
  string PostId = 1;
}

message GetPostByIdResponse {
  domain.Post Post = 1;
}

message GetPostByIdsRequest {
  repeated string PostIds = 1;
}

message GetPostByIdsResponse {
  domain.Post Post = 1;
}

